adjusted img.kendall to stop covering the title

--- a/unit1_projects/index.css
+++ b/unit1_projects/index.css
@@ -77,6 +77,7 @@ img.kendall {
 	border-radius:120px;
 	position:absolute;
 	top:-10px;
+	left:80px;
 }
 
 h1 {
